add code scan workflow